grafana/prometheus-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v1.5.2
        args:
        - '-storage.local.retention=360h'
        - '-storage.local.memory-chunks=1048576'
        - '-config.file=/etc/prometheus/prometheus.yml'
        - '-alertmanager.url=http://alertmanager:9093'
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        - name: alertrules-volume
          mountPath: /etc/prometheus-rules
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-configmap
      - name: alertrules-volume
        configMap:
          name: prometheus-alertrules
      nodeSelector:
        beta.kubernetes.io/os: linux
